--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
         <h1 align="middle">Homemade Cookies</h1>
         <h2 align="middle">Ingredients</h2>
         <p1 align="middle">
-            <div>1.All Purpose Flower</div>
-            <div>2.Baking Soda</div>
-            <div>3.Baking Powder</div>
-            <div>4.Salt</div> 
-            <div>5.Cornstarch</div>
-            <div>5.Unsalted Butter</div>
-            <div>6.Granulated Sugar</div>
-            <div>7.1 Egg</div>
-            <div>8.Vanilla Extract</div>
-            <div>9.Optional Almond Extract</div>
-            <div>10.Sour Cream</div>
-            <div>11.Partmit Paper</div>
-            <div>12.Flower</div>
-            <div>13.Powderd Surgar</div>
-            <div>14.Milk</div>
-            <div>15.Pure Vanilla Extract</div>
-            <div>16.Optinal Food Color</div>
+            <div align="middle">1.All Purpose Flower</div>
+            <div align="middle">2.Baking Soda</div>
+            <div align="middle">3.Baking Powder</div>
+            <div align="middle">4.Salt</div> 
+            <div align="middle">5.Cornstarch</div>
+            <div align="middle">5.Unsalted Butter</div>
+            <div align="middle">6.Granulated Sugar</div>
+            <div align="middle">7.1 Egg</div>
+            <div align="middle">8.Vanilla Extract</div>
+            <div align="middle">9.Optional Almond Extract</div>
+            <div align="middle">10.Sour Cream</div>
+            <div align="middle">11.Partmit Paper</div>
+            <div align="middle">12.Flower</div>
+            <div align="middle">13.Powderd Surgar</div>
+            <div align="middle">14.Milk</div>
+            <div align="middle">15.Pure Vanilla Extract</div>
+            <div align="middle">16.Optinal Food Color</div>
 </p1>
-   <h2 align="middle">Recipe</h2>
+
+    <h2 align="middle">Recipe</h2>
    <p1 align="middle">
        <h3><div>Dry Mixture</div></h3>
        <div>1.2 1/4 Cups ALL-Purpose Flour (270g)</div>
