--- a/index.html
+++ b/index.html
@@ -31,38 +31,38 @@
 
     <h2 align="middle">Recipe</h2>
    <p1 align="middle">
-       <h3><div>Dry Mixture</div></h3>
-       <div>1.2 1/4 Cups ALL-Purpose Flour (270g)</div>
-       <div>2.1/4 tsp. Baking Soda
-       <div>3.1/2 tsp. Baking Powder
-       <div>4.1/2 tsp. Salt
-       <div>5.1 Tbsp. Cornstarch
-       <div>6.Mix 
-       <h3>Mixing Mixture</h3>
-       <div>7.1/2 cup unsalted Butter, room temperature (113g)
-       <div>8.Mix For Cream
-       <div>9.1 cup Granulated Sugar (200g) Wile Mixing
-       <div>10.1 Egg. room temperature
-       <div>11.1 1/2 tsp. Vanilla Extract (7.5mL)
-       <div>12.Optional 1/4 tsp. Almond Extract
-       <div>13.Stop Mixing
-       <div>14.1/4 cup Sour Cream, room temperature (60g) Mix until in mixure
-       <div>15.Put Dry Mixture In With Mining Mixture, Mix until all are together
-       <div>16.Put on partmitsh papaer or plastic 
-       <div>17.Flaten the mixture
-       <div>18.Roll out and put it in the frige for 1 Hour
-       <div>19.Take out of frige
-       <div>20.Put on something and put some flower on it and put the mixure on it then put some flower on the mixure 
-       <div>21.Roll it out 
-       <div>22.cut it in what ever
-       <div>23.Put in oven for (375F) (8-9 Min)
-        <h3>Butter Cream Froting</h3>
-        <div>24.1/2 cup unsalted Butter, room temperature (113g), Mix for cream
-        <div>25.2 cups Powdered Surgar (240g), Mix
-        <div>26.2 Tbsp. Milk (30mL) plus more if needed, Mix wile doing it
-        <div>27.1 tsp. Pure Vanilla Extract (5mL)
-        <div>28.Optinal Food Color
-        <div>29.Smire or use a spoon to put on coockes
+       <h3 align="middle"><div>Dry Mixture</div></h3>
+       <div align="middle">1.2 1/4 Cups ALL-Purpose Flour (270g)</div>
+       <div align="middle">2.1/4 tsp. Baking Soda
+       <div align="middle">3.1/2 tsp. Baking Powder
+       <div align="middle">4.1/2 tsp. Salt
+       <div align="middle">5.1 Tbsp. Cornstarch
+       <div align="middle">6.Mix 
+       <h3 align="middle">Mixing Mixture</h3>
+       <div align="middle">7.1/2 cup unsalted Butter, room temperature (113g)
+       <div align="middle">8.Mix For Cream
+       <div align="middle">9.1 cup Granulated Sugar (200g) Wile Mixing
+       <div align="middle">10.1 Egg. room temperature
+       <div align="middle">11.1 1/2 tsp. Vanilla Extract (7.5mL)
+       <div align="middle">12.Optional 1/4 tsp. Almond Extract
+       <div align="middle">13.Stop Mixing
+       <div> align="middle"14.1/4 cup Sour Cream, room temperature (60g) Mix until in mixure
+       <div align="middle">15.Put Dry Mixture In With Mining Mixture, Mix until all are together
+       <div align="middle">16.Put on partmitsh papaer or plastic 
+       <div align="middle">17.Flaten the mixture
+       <div align="middle">18.Roll out and put it in the frige for 1 Hour
+       <div align="middle">19.Take out of frige
+       <div align="middle">20.Put on something and put some flower on it and put the mixure on it then put some flower on the mixure 
+       <div align="middle">21.Roll it out 
+       <div align="middle">22.cut it in what ever
+       <div align="middle">23.Put in oven for (375F) (8-9 Min)
+        <h3 align="middle">Butter Cream Froting</h3>
+        <div align="middle">24.1/2 cup unsalted Butter, room temperature (113g), Mix for cream
+        <div align="middle">25.2 cups Powdered Surgar (240g), Mix
+        <div align="middle">26.2 Tbsp. Milk (30mL) plus more if needed, Mix wile doing it
+        <div align="middle">27.1 tsp. Pure Vanilla Extract (5mL)
+        <div align="middle">28.Optinal Food Color
+        <div align="middle">29.Smire or use a spoon to put on coockes
             </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
    </p1>
     </body>
