--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <div align="middle">11.1 1/2 tsp. Vanilla Extract (7.5mL)
        <div align="middle">12.Optional 1/4 tsp. Almond Extract
        <div align="middle">13.Stop Mixing
-       <div> align="middle"14.1/4 cup Sour Cream, room temperature (60g) Mix until in mixure
+       <div align="middle">14.1/4 cup Sour Cream, room temperature (60g) Mix until in mixure
        <div align="middle">15.Put Dry Mixture In With Mining Mixture, Mix until all are together
        <div align="middle">16.Put on partmitsh papaer or plastic 
        <div align="middle">17.Flaten the mixture
